--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -41,7 +41,7 @@
                   <div class="header-bottom__right d-flex align-items-center justify-content-end">
 
                      <div class="header-bottom__btn d-flex align-items-center">
-                        <a class="tp-btn-orange tp-btn-hover alt-color-white d-none d-md-inline-block" href="{% url 'contact' %}">
+                        <a style="background-color: orangered" class="tp-btn-orange tp-btn-hover alt-color-white d-none d-md-inline-block" href="{% url 'contact' %}">
                            <span>Contactez-nous</span>
                            <b></b>
                         </a>
