--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -40,7 +40,7 @@
    <link rel="stylesheet" href="{% static 'assets/css/flaticon.css'%}">
    <link rel="stylesheet" href="{% static 'assets/css/swiper-bundle.css'%}">
    <link rel="stylesheet" href="{% static 'assets/css/meanmenu.css'%}">
-   <link rel="stylesheet" href="{% static 'assets/css/font-awesome-pro.css'%}">
+{#   <link rel="stylesheet" href="{% static 'assets/css/font-awesome-pro.css'%}">#}
    <link rel="stylesheet" href="{% static 'assets/css/magnific-popup.css'%}">
    <link rel="stylesheet" href="{% static 'assets/css/spacing.css'%}">
    <link rel="stylesheet" href="{% static 'assets/css/style.css'%}">
