--- a/templates/web/home.html
+++ b/templates/web/home.html
@@ -76,6 +76,9 @@
                                  <div class="tp-brand-item">
                                     <img src="{% static 'assets/img/hero/inhp.png' %}" alt="">
                                  </div>
+                                  <div class="tp-brand-item">
+                                    <img src="{% static 'assets/img/logosmit.jpg' %}" alt="">
+                                 </div>
                               </div>
                            </div>
                         </div>
