--- a/templates/web/home.html
+++ b/templates/web/home.html
@@ -77,7 +77,7 @@
                                     <img src="{% static 'assets/img/hero/inhp.png' %}" alt="">
                                  </div>
                                   <div class="tp-brand-item">
-                                    <img src="{% static 'assets/img/logosmit.jpg' %}" alt="">
+                                    <img src="{% static 'assets/img/hero/logosmit.jpg' %}" alt="">
                                  </div>
                               </div>
                            </div>
