--- a/templates/web/home.html
+++ b/templates/web/home.html
@@ -321,7 +321,7 @@
                                     <img src="{% static 'assets/img/plan/plan-4.png' %}" alt="">
                                 </div>
                                 <div class="tp-plan-img-5">
-                                    <img src="{% static 'assets/img/logosmit.jpg' %}" alt="">
+                                    <img src="{% static 'assets/img/hero/smit_log.png' %}" alt="">
                                 </div>
                                 <div class="tp-plan-img-6 d-none d-sm-block">
                                     <img src="{% static 'assets/img/plan/plan-6.png' %}" alt="">
